Fixed minor issues and preped the notebook for submitting

--- a/1-preprocessing.ipynb
+++ b/1-preprocessing.ipynb
@@ -11,8 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -28,8 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vinho_verde_red_url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv'\n",
@@ -51,24 +55,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -372,7 +376,7 @@
        "14      9.2        5  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -392,17 +396,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -706,7 +710,7 @@
        "14      9.7        5  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,100 +723,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ### What is the type of each feature?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "fixed_acidity           float64\n",
-       "volatile_acidity        float64\n",
-       "citric_acid             float64\n",
-       "residual_sugar          float64\n",
-       "chlorides               float64\n",
-       "free_sulfur_dioxide     float64\n",
-       "total_sulfur_dioxide    float64\n",
-       "density                 float64\n",
-       "ph                      float64\n",
-       "sulphates               float64\n",
-       "alcohol                 float64\n",
-       "quality                   int64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vinho_verde_red.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "fixed_acidity           float64\n",
-       "volatile_acidity        float64\n",
-       "citric_acid             float64\n",
-       "residual_sugar          float64\n",
-       "chlorides               float64\n",
-       "free_sulfur_dioxide     float64\n",
-       "total_sulfur_dioxide    float64\n",
-       "density                 float64\n",
-       "ph                      float64\n",
-       "sulphates               float64\n",
-       "alcohol                 float64\n",
-       "quality                   int64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vinho_verde_white.dtypes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "* ### Getting a Basic Statistical Description of each Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -990,7 +923,7 @@
        "max       4.010000     2.000000    14.900000     8.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,24 +934,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -1196,7 +1129,7 @@
        "max       3.820000     1.080000    14.200000     9.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,8 +1149,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def find_outlier_indices(df):\n",
@@ -1247,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1255,9 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vinho_verde_red_X = vinho_verde_red.drop(['quality'], axis=1)\n",
@@ -1333,7 +1270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ### 1.2. Searching (and Removing) Outliers"
+    "* ### 1.2.ii Searching (and Removing) Outliers"
    ]
   },
   {
@@ -1504,7 +1441,9 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vv_white_corr = pd.concat([vv_white_X, vv_white_y], axis=1).corr().abs()\n",
@@ -1522,7 +1461,7 @@
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1631,7 +1570,7 @@
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1733,7 +1672,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
@@ -1751,7 +1692,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
@@ -2169,7 +2112,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
@@ -2244,48 +2189,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* ### 1.5.2. Comparison with AutoEncoder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* ### 1.6. Dataset Sampling (and use Pandas describe() function to compare with original's stats)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* ### 1.6. T-SNE Dataset 2-D Plot (Before/After Sampling)"
+    "* ### 1.5.2 T-SNE Dataset 2-D Plot (Before/After Sampling)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -2317,7 +2228,7 @@
    ],
    "source": [
     "plt.figure(0, figsize=(25, 10))\n",
-    "plt.title('Vinho Verde Red Wine -- PCA Dimension-Reduced Plot')\n",
+    "plt.title('Vinho Verde Red Wine -- TSNE Dimension-Reduced Plot')\n",
     "plt.xlabel('X')\n",
     "plt.ylabel('Y')\n",
     "\n",
@@ -2343,39 +2254,20 @@
    ],
    "source": [
     "plt.figure(0, figsize=(25, 10))\n",
-    "plt.title('Vinho Verde White Wine -- PCA Dimension-Reduced Plot')\n",
+    "plt.title('Vinho Verde White Wine -- TSNE Dimension-Reduced Plot')\n",
     "plt.xlabel('X')\n",
     "plt.ylabel('Y')\n",
     "\n",
     "plt.scatter(vv_white_embedded[0], vv_white_embedded[1], color='black')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* ### 2. Save the Dataset for use in future Steps. The Dataset should be:\n",
-    "  * ##### cleaned *(free from NaN/Null values)*\n",
-    "  * ##### normalized\n",
-    "  * ##### dimension reduced *(if applicable)*\n",
-    "  * ##### non-outlier removed *(we'll see about that)*\n",
-    "  * ##### non-sampled *(the dataset is already small enough)*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:Anaconda3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-Anaconda3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2387,7 +2279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
