--- a/5-association-rule-mining.ipynb
+++ b/5-association-rule-mining.ipynb
@@ -422,6 +422,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quality_labels(y):\n",
+    "    if y <= 4:\n",
+    "        return -1\n",
+    "    elif y <= 6:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rn_wine_y = np.array(list(map(quality_labels, rn_wine_y)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5687,6 +5711,13 @@
    "source": [
     "rn_wine['quality'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
